--- a/packages/react-identicon/package.json
+++ b/packages/react-identicon/package.json
@@ -5,20 +5,24 @@
   "version": "0.0.0",
   "type": "module",
   "main": "src/index.js",
+  "scripts": {
+    "build": "tsc --project tsconfig.build.json",
+    "clean": "rm -rf ./dist && rm -rf ./tsconfig.tsbuildinfo ./tsconfig.build.tsbuildinfo"
+  },
   "dependencies": {
+    "colord": "^2.9.3",
     "dedot": "^0.7.0",
-    "tslib": "^2.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "ethereum-blockies-base64": "^1.0.2",
     "jdenticon": "3.2.0",
+    "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "styled-components": "^6.1.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.18",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.18",
-    "@types/react": "^18.3.18"
+    "@types/react-dom": "^18.2.18"
   },
   "engines": {
     "node": ">=18"
