add example dapp

--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "version": "0.0.0",
   "author": "Tung Vu <tung@dedot.dev>",
   "license": "MIT",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
     "build": "yarn clean && npx lerna run build --no-private",
     "clean": "npx lerna run clean",
     "fix-esm-path": "npx tsc-esm-fix --src=packages --ext=.js"
   },
   "devDependencies": {
-    "prettier": "^3.4.2",
-    "typescript": "^5.2.2",
     "lerna": "^7.4.2",
-    "tsc-esm-fix": "^2.20.27"
+    "prettier": "^3.4.2",
+    "tsc-esm-fix": "^2.20.27",
+    "typescript": "^5.2.2"
   }
 }
