--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "prettier": "^3.4.2",
     "tsc-esm-fix": "^2.20.27",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@4.6.0"
 }
