--- a/packages/react-identicon/package.json
+++ b/packages/react-identicon/package.json
@@ -11,18 +11,17 @@
   },
   "dependencies": {
     "colord": "^2.9.3",
+    "copy-to-clipboard": "^3.3.3",
     "dedot": "^0.7.0",
     "jdenticon": "3.2.0",
-    "react": "^18.3.1",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "styled-components": "^6.1.1",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.18"
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   },
   "engines": {
     "node": ">=18"
