--- a/packages/react-identicon/package.json
+++ b/packages/react-identicon/package.json
@@ -10,18 +10,19 @@
     "clean": "rm -rf ./dist && rm -rf ./tsconfig.tsbuildinfo ./tsconfig.build.tsbuildinfo"
   },
   "dependencies": {
+    "@dedot/utils": "^0.7.0",
     "colord": "^2.9.3",
     "copy-to-clipboard": "^3.3.3",
-    "dedot": "^0.7.0",
     "jdenticon": "3.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "styled-components": "^6.1.1",
-    "tslib": "^2.8.1"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1 || 19",
+    "react-dom": "^18.3.1 || 19"
   },
   "engines": {
     "node": ">=18"
