--- a/packages/react-identicon/package.json
+++ b/packages/react-identicon/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "@dedot/utils": "^0.7.0",
-    "colord": "^2.9.3",
     "copy-to-clipboard": "^3.3.3",
-    "jdenticon": "3.2.0",
-    "styled-components": "^6.1.1"
+    "jdenticon": "3.2.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
