chore: add publish config

--- a/packages/react-identicon/package.json
+++ b/packages/react-identicon/package.json
@@ -25,5 +25,9 @@
   "engines": {
     "node": ">=18"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
   "license": "MIT"
 }
